--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -10,7 +10,7 @@ spec:
         tasks:
           - name: "deployment"
             properties:
-              deploymentstrategy: "direct"
+              deploymentstrategy: "user_managed"
           - name: "test"
             properties:
               teststrategy: "functional"
